--- a/PatronatGroup/ClientApp/package.json
+++ b/PatronatGroup/ClientApp/package.json
@@ -3,21 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "@types/redux": "^3.6.0",
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
     "history": "4.10.1",
+    "i18next": "^21.5.3",
     "jquery": "^3.5.1",
     "merge": "1.2.1",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "react-redux": "7.1.1",
+    "react-i18next": "^11.14.3",
+    "react-redux": "^7.2.6",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.4",
     "reactstrap": "8.1.1",
-    "redux": "4.0.4",
+    "redux": "^4.0.4",
     "redux-thunk": "2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "svgo": "1.3.0"
   },
   "devDependencies": {
@@ -26,7 +32,7 @@
     "@types/node": "^12.11.6",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
-    "@types/react-redux": "7.1.5",
+    "@types/react-redux": "^7.1.20",
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "5.1.0",
     "@types/reactstrap": "8.0.6",
@@ -38,7 +44,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
     "nan": "^2.14.1",
-    "typescript": "^3.6.4"
+    "typescript": "^3.9.10"
   },
   "scripts": {
     "start": "react-scripts start",
