--- a/PatronatGroup/ClientApp/package.json
+++ b/PatronatGroup/ClientApp/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/react-slick": "^0.23.7",
     "@types/redux": "^3.6.0",
+    "@types/slick-carousel": "^1.6.37",
+    "@types/yup": "^0.29.13",
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
+    "formik": "^2.2.9",
     "history": "4.10.1",
     "i18next": "^21.5.3",
     "jquery": "^3.5.1",
@@ -19,22 +23,25 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.4",
+    "react-slick": "^0.28.1",
     "reactstrap": "8.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "svgo": "1.3.0"
+    "slick-carousel": "^1.8.1",
+    "svgo": "1.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/history": "4.7.3",
     "@types/jest": "^24.0.19",
     "@types/node": "^12.11.6",
-    "@types/react": "^16.9.9",
+    "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.2",
     "@types/react-redux": "^7.1.20",
     "@types/react-router": "5.1.2",
-    "@types/react-router-dom": "5.1.0",
+    "@types/react-router-dom": "^5.1.0",
     "@types/reactstrap": "8.0.6",
     "@typescript-eslint/parser": "^2.5.0",
     "cross-env": "6.0.3",
