--- a/PatronatGroup/ClientApp/package.json
+++ b/PatronatGroup/ClientApp/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/lodash": "^4.14.178",
     "@types/react-slick": "^0.23.7",
     "@types/redux": "^3.6.0",
     "@types/slick-carousel": "^1.6.37",
     "@types/yup": "^0.29.13",
+    "axios": "^0.24.0",
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
     "formik": "^2.2.9",
     "history": "4.10.1",
     "i18next": "^21.5.3",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.21",
     "merge": "1.2.1",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
@@ -24,6 +27,7 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.4",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.1.0",
     "reactstrap": "8.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "2.3.0",
@@ -39,7 +43,7 @@
     "@types/node": "^12.11.6",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.2",
-    "@types/react-redux": "^7.1.20",
+    "@types/react-redux": "^7.1.21",
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "^5.1.0",
     "@types/reactstrap": "8.0.6",
